js/js.translator/testData/incremental/invalidation/inlineFunctionCircleUsage/lib1/l1a.2.kt
inline fun funA(flag: Boolean = false): Int {
    if (flag) {
        return funB()
    }
    return 2
}
